# mail-bouncer

./: .env-example  .gitignore  Cargo.toml  LICENSE  README.md  dockerfile
.github/workflows/: ci.yaml
src/: captcha.rs  error.rs  mail.rs  main.rs
