[package]
name = "mail_bouncer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["headers"] }
captcha = "0.0.9"
chrono = { version = "0.4" }
dotenv = "0.15"
headers = "0.3"
http = "0.2"
lettre = { version = "0.10", features = ["tokio1", "tokio1-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.2", features = ["full", "sync"] }
tower = {version="0.4", features = ["filter"]}
tower-http = {version="0.3", features = ["trace", "cors"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }